<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/amarelo_bem_me_quer"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:background="@drawable/fundo_branco_curvo"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_logoOng"
            android:layout_width="300dp"
            android:layout_height="192dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/descricaoLogoOng"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_bmq" />
    </LinearLayout>

    <!--Caixa amarela da tela com todos os seus conteúdos-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/fundo_amarelo_curvo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Texto de Identificação -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/login"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/roxo_bem_me_quer"
                android:layout_marginBottom="16dp" />

            <!--Caixas de preenchimento para o usuário-->
            <EditText
                android:id="@+id/editEmail"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:background="@drawable/borda_caixa_texto"
                android:textColor="@color/black"
                android:textColorHint="#A1887F"
                android:textSize="20sp"
                android:padding="18dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"/>

            <EditText
                android:id="@+id/editTextSenha"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:autofillHints="password"
                android:background="@drawable/borda_caixa_texto"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColor="@color/black"
                android:textColorHint="#A1887F"
                android:textSize="20sp" />
            <!-- AUTOFILLHINTS oferece o preenchimento automático da senha-->

            <!-- Botão de Login -->
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mostrarSenha"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/roxo_bem_me_quer"
                android:textColor="@color/white"
                android:text="@string/entrar" />
            <TextView
                android:id="@+id/textCadastre_se"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:text="@string/cadastre_se"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>